# trading_and_finances

./: .env.example  .gitignore  MANIFEST.in  PYTHON311_COMPATIBILITY.md  QUICKSTART.md  README.md  USAGE.md  config.py  pyproject.toml  requirements.txt  run_dashboard.py  setup.py  verify_python311.py
dashboard/: app.py
examples/: multi_strategy.py  portfolio_optimization.py  regime_detection.py  simple_backtest.py
src/: __init__.py
src/analytics/: __init__.py  attribution.py  performance.py  visualization.py
src/data/: __init__.py  features.py  loaders.py  processors.py
src/execution/: __init__.py  cost_models.py  order_book.py  simulator.py
src/ml/: __init__.py  models.py  regime_detector.py
src/optimization/: __init__.py  portfolio.py
src/risk/: __init__.py  decomposition.py  limits.py  metrics.py
src/strategy/: __init__.py  base.py  composer.py
src/strategy/implementations/: __init__.py  mean_reversion.py  ml_strategy.py  momentum.py
